--- a/src/main/resources/com/group/p2_socializer/calendar-view.fxml
+++ b/src/main/resources/com/group/p2_socializer/calendar-view.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane prefHeight="708.0" prefWidth="749.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.help.CalendarController">
+<StackPane prefHeight="708.0" prefWidth="749.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CalendarController">
    <children>
       <BorderPane prefHeight="643.0" prefWidth="747.0">
          <center>
@@ -129,7 +129,7 @@
                         <Font name="Eras Light ITC" size="12.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="eventCalendarButton" prefHeight="46.0" prefWidth="107.0" styleClass="calendarButtonColor" stylesheets="@style.css" text="Event Calendar" wrapText="true">
+                  <JFXButton fx:id="eventCalendarButton" prefHeight="46.0" prefWidth="107.0" styleClass="calendarButtonColor" stylesheets="@style.css" text="Event com.group.p2_socializer.Calendar" wrapText="true">
                      <graphic>
                         <FontAwesomeIconView glyphName="CALENDAR" size="20" />
                      </graphic>
