--- a/src/main/resources/com/group/p2_socializer/create-event-view.fxml
+++ b/src/main/resources/com/group/p2_socializer/create-event-view.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="674.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.help.CreateEventController">
+<AnchorPane prefHeight="674.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CreateEventController">
    <children>
       <BorderPane prefHeight="674.0" prefWidth="609.0">
          <top>
