--- a/src/main/resources/com/group/p2_socializer/calendar-view.fxml
+++ b/src/main/resources/com/group/p2_socializer/calendar-view.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane prefHeight="708.0" prefWidth="749.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CalendarController">
+<StackPane prefHeight="708.0" prefWidth="749.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Calendar.CalendarController">
    <children>
       <BorderPane prefHeight="643.0" prefWidth="747.0">
          <center>
