--- a/src/main/resources/com/group/p2_socializer/choose_gathering.fxml
+++ b/src/main/resources/com/group/p2_socializer/choose_gathering.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -11,35 +12,53 @@
          <children>
             <HBox prefHeight="550.0" prefWidth="796.0">
                <children>
-                  <VBox prefHeight="431.0" prefWidth="553.0">
+                  <VBox fx:id="eventGatheringVBox" prefHeight="431.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
                      <children>
-                        <Label prefHeight="70.0" prefWidth="270.0" text="Event Gathering" textAlignment="CENTER" />
+                        <Label alignment="CENTER" prefHeight="70.0" prefWidth="270.0" text="Event Gathering" textAlignment="CENTER" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 1" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 2" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 3" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 4" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 5" />
                      </children>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox fx:id="customGatheringVBox" onMouseClicked="#handleCustomGatheringCreation" prefHeight="431.0" prefWidth="553.0">
+                  <VBox fx:id="customGatheringVBox" onMouseClicked="#handleCustomGatheringCreation" prefHeight="431.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
                      <children>
-                        <Label prefHeight="70.0" prefWidth="270.0" text="Custom Gathering" textAlignment="CENTER" />
+                        <Label alignment="CENTER" prefHeight="70.0" prefWidth="270.0" text="Custom Gathering" textAlignment="CENTER" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 1" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 2" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 3" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 4" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 5" />
                      </children>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox prefHeight="431.0" prefWidth="553.0">
+                  <VBox fx:id="preDefinedGatheringVBox" prefHeight="431.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
                      <children>
-                        <Label prefHeight="70.0" prefWidth="270.0" text="Pre-defined Gathering" />
+                        <Label alignment="CENTER" prefHeight="70.0" prefWidth="270.0" text="Pre-defined Gathering" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 1" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 2" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 3" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 4" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 5" />
                      </children>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
                   </VBox>
                </children>
             </HBox>
