--- a/src/main/resources/com/group/p2_socializer/choose_gathering.fxml
+++ b/src/main/resources/com/group/p2_socializer/choose_gathering.fxml
@@ -8,11 +8,11 @@
 
 <AnchorPane fx:id="ChooseGatheringAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="781.0" prefWidth="956.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Tabs.ChooseGatheringTabController">
    <children>
-      <VBox layoutX="325.0" layoutY="199.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="120.0">
+      <VBox layoutX="325.0" layoutY="199.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="140.0">
          <children>
             <HBox prefHeight="550.0" prefWidth="796.0">
                <children>
-                  <VBox fx:id="eventGatheringVBox" prefHeight="431.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
+                  <VBox fx:id="eventGatheringVBox" onMouseClicked="#handleEventGatheringCreation" prefHeight="431.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
                      <children>
                         <Label alignment="CENTER" prefHeight="70.0" prefWidth="270.0" text="Event Gathering" textAlignment="CENTER" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 1" />
@@ -44,7 +44,7 @@
                         <Insets left="10.0" right="10.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox fx:id="preDefinedGatheringVBox" prefHeight="431.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
+                  <VBox fx:id="preDefinedGatheringVBox" onMouseClicked="#handlePremadeGatheringCreation" prefHeight="431.0" prefWidth="553.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
                      <children>
                         <Label alignment="CENTER" prefHeight="70.0" prefWidth="270.0" text="Pre-defined Gathering" />
                         <Label prefHeight="72.0" prefWidth="266.0" text="PUNKT 1" />
