--- a/src/main/resources/com/group/p2_socializer/create_event_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/create_event_page.fxml
@@ -15,11 +15,11 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Tabs.CreateEventController">
    <children>
-      <BorderPane layoutX="9.0" layoutY="10.0" prefHeight="671.0" prefWidth="749.0">
+      <BorderPane prefHeight="681.0" prefWidth="758.0">
          <top>
             <AnchorPane prefHeight="91.0" prefWidth="609.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label layoutX="14.0" prefHeight="81.0" prefWidth="434.0" text="Create Gathering">
+                  <Label layoutX="14.0" prefHeight="91.0" prefWidth="434.0" text="Create Gathering" AnchorPane.leftAnchor="14.0">
                      <font>
                         <Font name="Eras Bold ITC" size="34.0" />
                      </font>
@@ -30,7 +30,7 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <VBox layoutX="63.0" prefHeight="561.0" prefWidth="623.0" spacing="10.0">
+                  <VBox layoutX="63.0" prefHeight="561.0" prefWidth="623.0" spacing="10.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0">
                      <children>
                         <Label text="Event name:" />
                         <JFXTextField fx:id="eventNameTextField" prefHeight="25.0" prefWidth="432.0" promptText="eg. Board game night!">
