--- a/src/main/resources/com/group/p2_socializer/create_event_gathering.fxml
+++ b/src/main/resources/com/group/p2_socializer/create_event_gathering.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CreateGatherings.CreateEventGatheringController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.CreateGatherings.CreateGatheringController">
    <children>
       <BorderPane prefHeight="681.0" prefWidth="758.0">
          <top>
@@ -105,7 +105,7 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="99.0" prefWidth="409.0">
                            <children>
-                              <JFXButton fx:id="createNewEventButton" onAction="#handleCreateEvent" prefHeight="61.0" prefWidth="138.0" text="Create Event" />
+                              <JFXButton fx:id="createNewEventButton" onAction="#handleCreateEventGathering" prefHeight="61.0" prefWidth="138.0" text="Create Gathering" />
                            </children>
                         </HBox>
                      </children>
