--- a/src/main/resources/com/group/p2_socializer/gathering_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/gathering_page.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -26,86 +25,13 @@
                <center>
                   <AnchorPane fx:id="centerPane" BorderPane.alignment="CENTER">
                      <children>
-                        <JFXButton layoutX="120.0" layoutY="411.0" prefHeight="29.0" prefWidth="86.0" ripplerFill="#7bce3c" text="Attend Event" wrapText="true" />
-                        <JFXButton layoutX="28.0" layoutY="411.0" prefHeight="29.0" prefWidth="75.0" ripplerFill="#7bce3c" text="Interested" wrapText="true" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" height="111.0" layoutX="37.0" layoutY="654.0" stroke="BLACK" strokeType="INSIDE" width="253.0" AnchorPane.leftAnchor="37.0">
-                           <fill>
-                              <LinearGradient endX="1.0" endY="1.0">
-                                 <stops>
-                                    <Stop>
-                                       <color>
-                                          <Color red="0.4224841594696045" green="0.5339155793190002" blue="0.6381579041481018" />
-                                       </color>
-                                    </Stop>
-                                    <Stop offset="1.0">
-                                       <color>
-                                          <Color red="1.0" green="1.0" blue="1.0" />
-                                       </color>
-                                    </Stop>
-                                 </stops>
-                              </LinearGradient>
-                           </fill>
-                        </Rectangle>
-                        <Circle layoutX="80.0" layoutY="690.0" radius="29.0" stroke="BLACK" strokeType="INSIDE">
-                           <fill>
-                              <LinearGradient endX="1.0" endY="1.0">
-                                 <stops>
-                                    <Stop>
-                                       <color>
-                                          <Color red="0.2898087203502655" green="0.5139777064323425" blue="0.7236841917037964" />
-                                       </color>
-                                    </Stop>
-                                    <Stop offset="1.0">
-                                       <color>
-                                          <Color red="1.0" green="1.0" blue="1.0" />
-                                       </color>
-                                    </Stop>
-                                 </stops>
-                              </LinearGradient>
-                           </fill>
-                        </Circle>
-                        <Circle layoutX="163.0" layoutY="690.0" radius="29.0" stroke="BLACK" strokeType="INSIDE">
-                           <fill>
-                              <LinearGradient endX="1.0" endY="1.0">
-                                 <stops>
-                                    <Stop>
-                                       <color>
-                                          <Color red="0.2898087203502655" green="0.5139777064323425" blue="0.7236841917037964" />
-                                       </color>
-                                    </Stop>
-                                    <Stop offset="1.0">
-                                       <color>
-                                          <Color red="1.0" green="1.0" blue="1.0" />
-                                       </color>
-                                    </Stop>
-                                 </stops>
-                              </LinearGradient>
-                           </fill>
-                        </Circle>
-                        <Circle layoutX="239.0" layoutY="690.0" radius="29.0" stroke="BLACK" strokeType="INSIDE">
-                           <fill>
-                              <LinearGradient endX="1.0" endY="1.0">
-                                 <stops>
-                                    <Stop>
-                                       <color>
-                                          <Color red="0.2898087203502655" green="0.5139777064323425" blue="0.7236841917037964" />
-                                       </color>
-                                    </Stop>
-                                    <Stop offset="1.0">
-                                       <color>
-                                          <Color red="1.0" green="1.0" blue="1.0" />
-                                       </color>
-                                    </Stop>
-                                 </stops>
-                              </LinearGradient>
-                           </fill>
-                        </Circle>
+                        <JFXButton layoutX="152.0" layoutY="411.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" text="Attend Gathering" wrapText="true" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="285.0" layoutX="368.0" layoutY="445.0" stroke="BLACK" strokeType="INSIDE" width="226.0" />
                         <JFXTextArea layoutX="369.0" layoutY="730.0" prefHeight="35.0" prefWidth="227.0" promptText="Chat" />
                         <VBox fx:id="eventInfoVBox" layoutX="36.0" layoutY="312.0" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="26.0">
                            <children>
                               <Label fx:id="eventDateLabel" text="Label" />
-                              <Label fx:id="eventTitleLabel" text="Label" maxWidth="558" />
+                              <Label fx:id="eventTitleLabel" maxWidth="558" text="Label" />
                               <Label fx:id="eventLocationLabel" text="Label" />
                               <HBox fx:id="organiserHBox" prefWidth="534.0">
                                  <children>
@@ -120,10 +46,10 @@
                            <children>
                               <FontAwesomeIconView glyphName="WRENCH" size="20">
                                  <HBox.margin>
-                                    <Insets left="30.0" right="10.0" top="5.0" />
+                                    <Insets left="5.0" right="10.0" top="5.0" />
                                  </HBox.margin>
                               </FontAwesomeIconView>
-                              <Label prefHeight="29.0" prefWidth="101.0" text="MANAGE EVENT:" underline="true">
+                              <Label prefHeight="29.0" prefWidth="137.0" text="MANAGE GATHERING:" underline="true">
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font>
@@ -131,7 +57,7 @@
                               <JFXButton prefHeight="29.0" prefWidth="78.0" text="Edit event" />
                               <JFXButton fx:id="postNewsButton" prefHeight="29.0" prefWidth="78.0" text="Post news" />
                               <JFXButton prefHeight="29.0" prefWidth="104.0" text="Manage groups" />
-                              <JFXButton prefHeight="29.0" prefWidth="91.0" text="Cancel event" />
+                              <JFXButton prefHeight="29.0" prefWidth="127.0" text="Cancel Gathering" />
                            </children>
                            <padding>
                               <Insets bottom="1.0" />
@@ -156,13 +82,14 @@
                            </fill>
                         </Rectangle>
                         <Line endX="464.0" layoutX="130.0" layoutY="405.0" startX="-92.5" />
-                        <Line endX="100.0" layoutX="138.0" layoutY="447.0" startX="-100.0" />
+                        <Line endX="147.0" layoutX="138.0" layoutY="447.0" startX="-100.0" />
                         <VBox fx:id="postList" layoutX="9.0" layoutY="845.0" minWidth="558" />
                         <Label layoutX="37.0" layoutY="805.0" minWidth="558.0" text="Posts:">
                            <font>
                               <Font name="System Bold" size="21.0" />
                            </font>
                         </Label>
+                        <JFXButton layoutX="28.0" layoutY="411.0" prefHeight="29.0" prefWidth="116.0" ripplerFill="#7bce3c" text="Intersted" wrapText="true" />
                      </children>
                   </AnchorPane>
                </center>
