--- a/src/main/resources/com/group/p2_socializer/profile_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/profile_page.fxml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="MyProfileTab" minHeight="0.0" minWidth="0.0" prefHeight="781.0" prefWidth="956.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Tabs.ProfileTabController">
+<AnchorPane fx:id="MyProfileTab" minHeight="0.0" minWidth="0.0" prefHeight="781.0" prefWidth="956.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Tabs.ProfileTabController">
    <children>
       <AnchorPane layoutY="-2.0" prefHeight="781.0" prefWidth="238.0" style="-fx-background-color: Royalblue;">
          <children>
@@ -63,7 +70,7 @@
                         </HBox>
                         <Button fx:id="inviteToGathering" alignment="TOP_CENTER" mnemonicParsing="false" text="Invite to gathering" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="21.0" opacity="0.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-                        <Button fx:id="reportUser" alignment="TOP_CENTER" mnemonicParsing="false"  style="-fx-background-color: salmon;" text="Report" />
+                        <Button fx:id="reportUser" alignment="TOP_CENTER" mnemonicParsing="false" style="-fx-background-color: salmon;" text="Report" />
                      </children>
                   </VBox>
                </children>
@@ -96,82 +103,7 @@
                         <Insets left="5.0" />
                      </HBox.margin>
                   </Text>
-                  <GridPane maxHeight="-Infinity" prefHeight="90.0" prefWidth="98.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.rowIndex="2" />
-                        <TextField fx:id="profileTag2" editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.rowIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="profileTag1" editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" />
-                     </children>
-                  </GridPane>
-                  <GridPane maxHeight="-Infinity" prefHeight="90.0" prefWidth="98.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.rowIndex="2" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.rowIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" />
-                     </children>
-                  </GridPane>
-                  <GridPane maxHeight="-Infinity" prefHeight="90.0" prefWidth="98.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.rowIndex="2" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.rowIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" />
-                     </children>
-                  </GridPane>
-                  <GridPane maxHeight="-Infinity" prefHeight="90.0" prefWidth="98.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.rowIndex="2" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.rowIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField editable="false" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #d3ebed; -fx-border-color: AFCACD; -fx-border-style: dotted dotted dotted dotted;" text="tag 1" />
-                     </children>
-                  </GridPane>
+                  <Text fx:id="tagListText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="350.0" />
                </children>
             </HBox>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gatherings this user is interested in:" wrappingWidth="305.642578125">
@@ -179,7 +111,7 @@
                   <Insets left="5.0" />
                </VBox.margin>
             </Text>
-            <JFXListView fx:id="listGatheringInterest" onMouseClicked="#goToSelectedGathering" prefHeight="195.0" prefWidth="594.0" />
+            <JFXListView fx:id="listGatheringInterest" prefHeight="195.0" prefWidth="594.0" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gatherings this user has attended:" wrappingWidth="255.533203125">
                <VBox.margin>
                   <Insets left="5.0" />
@@ -194,5 +126,6 @@
             <JFXListView fx:id="listGatheringOrganized" prefHeight="262.0" prefWidth="594.0" />
          </children>
       </VBox>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
    </children>
 </AnchorPane>
