--- a/src/main/resources/com/group/p2_socializer/main_window.fxml
+++ b/src/main/resources/com/group/p2_socializer/main_window.fxml
@@ -35,7 +35,7 @@
                    <FontAwesomeIconView glyphName="STAR" size="20" />
                </graphic>
             </Tab>
-            <Tab fx:id="groupsTab" onSelectionChanged="#detectTab" text="Discover">
+            <Tab fx:id="discoverTab" onSelectionChanged="#detectTab" text="Discover">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                </content>
