--- a/src/main/resources/com/group/p2_socializer/login_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/login_page.fxml
@@ -1,41 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.UserLogIn.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.UserLogIn.LoginController">
    <left>
-      <AnchorPane prefHeight="407.0" prefWidth="228.0" style="-fx-background-color: Royalblue;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="407.0" prefWidth="228.0" style="-fx-background-color: #00bcd4;" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" layoutX="6.0" layoutY="83.0" prefHeight="17.0" prefWidth="214.0" text="SocializerApp" textFill="#f8f8f8">
-               <font>
-                  <Font name="Verdana Bold Italic" size="24.0" />
-               </font>
-               <effect>
-                  <DropShadow />
-               </effect>
-            </Label>
-            <Label alignment="CENTER" layoutX="7.0" layoutY="144.0" prefHeight="17.0" prefWidth="214.0" text="Login Page" textFill="#f8f8f8">
-               <font>
-                  <Font name="Arial Italic" size="21.0" />
-               </font>
-               <effect>
-                  <DropShadow />
-               </effect>
-            </Label>
-            <Line endX="81.66667175292969" layoutX="111.0" layoutY="131.0" startX="-80.33333587646484" stroke="WHITE" strokeWidth="2.0">
-               <effect>
-                  <DropShadow />
-               </effect>
-            </Line>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="153.0" layoutX="14.0" layoutY="43.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="352.0" prefHeight="17.0" prefWidth="215.0" text="Copyright (c). All Rights Reserved" textFill="WHITE">
                <font>
                   <Font name="Arial" size="10.0" />
@@ -44,6 +24,12 @@
                   <DropShadow />
                </effect>
             </Label>
+            <ImageView fitHeight="124.0" fitWidth="200.0" layoutX="12.0" layoutY="36.0">
+               <image>
+                  <Image url="@logo_login.png" />
+               </image>
+            </ImageView>
+            <Line endX="100.0" layoutX="114.0" layoutY="188.0" startX="-100.0" />
          </children>
          <effect>
             <DropShadow />
@@ -65,12 +51,12 @@
             </Label>
             <TextField fx:id="username" layoutX="116.0" layoutY="121.0" promptText="Username" />
             <PasswordField fx:id="password" layoutX="117.0" layoutY="164.0" promptText="Password" />
-            <Button fx:id="loginButton" layoutX="40.0" layoutY="232.0" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="31.0" prefWidth="228.0" style="-fx-background-color: #263F73;" text="Login" textFill="WHITE">
+            <Button fx:id="loginButton" layoutX="40.0" layoutY="232.0" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="31.0" prefWidth="228.0" style="-fx-background-color: #00bcd4;" text="Login" textFill="WHITE">
                <effect>
                   <DropShadow />
                </effect>
             </Button>
-            <Button fx:id="quitButton" layoutX="40.0" layoutY="326.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="228.0" style="-fx-background-color: #263F73;" text="Quit" textFill="WHITE">
+            <Button fx:id="quitButton" layoutX="40.0" layoutY="326.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="228.0" style="-fx-background-color: #00bcd4;" text="Quit" textFill="WHITE">
                <effect>
                   <DropShadow />
                </effect>
@@ -85,7 +71,7 @@
                   <Font name="Arial" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="loginButton1" layoutX="40.0" layoutY="278.0" mnemonicParsing="false" onAction="#onRegisterButtonClick" prefHeight="31.0" prefWidth="228.0" style="-fx-background-color: #263F73;" text="New User? (Create Account)" textFill="WHITE">
+            <Button fx:id="loginButton1" layoutX="40.0" layoutY="278.0" mnemonicParsing="false" onAction="#onRegisterButtonClick" prefHeight="31.0" prefWidth="228.0" style="-fx-background-color: #00bcd4;" text="New User? (Create Account)" textFill="WHITE">
                <effect>
                   <DropShadow />
                </effect>
